zeta-code/tui/src/app/snapshots/zeta_tui__app__conversation_flow_tests__conversation_second_turn.snap
---
source: zeta-code/tui/src/app/conversation_flow_tests.rs
expression: render(&app)
---
  Home  .

> 请 正 常 回 复 ， 并 展 示 多 行 输 出 。

● 你 好 ！ 普 通 对 话 已 经 连 通 。

  fn main() { println!("zeta"); }

  • 流 式 输 出 正 常
  • 多 行 文 本 正 常

> 第 二 轮 还 能 看 到 上 一 轮 吗 ？

● 可 以 。 第 二 轮 回 复 已 完 成 ， 并 保 留 了 上 一 轮 上 下 文 。











                                                                         shift+tab to cycle policy
  ╭────────────────────────────────────────────────────────────────────────────────────────────────╮
> │                                                                                                │
  ╰────────────────────────────────────────────────────────────────────────────── Automatic model ─╯

  ⏸ ask permissions on
  Enter send  ·  shift+tab permissions  ·  /home
