zeta-code/tui/src/app/snapshots/zeta_tui__app__conversation_flow_tests__conversation_submitted.snap
---
source: zeta-code/tui/src/app/conversation_flow_tests.rs
assertion_line: 102
expression: render(&app)
---

    ▄  ▄     Zeta Code v0.1.0
  ▗█▛██▜█▖   Automatic model · Access unknown
  ▝▜████▛▘   .
    ▝  ▘

> 请 正 常 回 复 ， 并 展 示 多 行 输 出 。


















⠋ Starting · 0m 00s total
                                                                         shift+tab to cycle policy
────────────────────────────────────────────────────────────────────────────────────────────────────
>
────────────────────────────────────────────────────────────────────────────────────────────────────

  ⏸ ask permissions on
